fix alignment of alert area

--- a/app/assets/stylesheets/grenadine/shared_styles.css.scss
+++ b/app/assets/stylesheets/grenadine/shared_styles.css.scss
@@ -8,7 +8,7 @@ div.has-error p.help-block:not(:empty), small.help-block:not(:empty), div.error 
 }
 #alert-area:not(:empty) {
   width: 100%;
-  padding: 5px 5px 5px 0;
+  padding: 5px 0 5px 0;
 
   &.active {
     z-index: 1000;
